[package]
name = "drive-lab-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-multipart-extract = "0.1.5"
actix-web = "4.5.1"
awmp = "0.8.1"
derive_more = "0.99.17"
env_logger = "0.11.3"
futures = "0.3.30"
futures-util = "0.3.30"
image = "0.25.1"
leptess = "0.14.0"
rusty-tesseract = "1.1.10"
serde = { version = "1.0", features = ["derive"] }
[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
